--- a/index.html
+++ b/index.html
@@ -40,8 +40,126 @@
             </p>
           </div>
         </section>
-      </main>
-      <footer class="footer">
+        <div class="photo">
+          <img src="./images/item_1.jpg" alt="Paisaje_1" class="photo__item" />
+          <img src="./images/item_2.jpg" alt="Paisaje_2" class="photo__item" />
+          <img src="./images/item_3.jpg" alt="Paisaje_3" class="photo__item" />
+          <img src="./images/item_4.jpg" alt="Paisaje_4" class="photo__item" />
+          <img src="./images/item_5.jpg" alt="Paisaje_5" class="photo__item" />
+          <img src="./images/item_6.jpg" alt="Paisaje_6" class="photo__item" />
+          <img src="./images/item_7.jpg" alt="Paisaje_7" class="photo__item" />
+          <img src="./images/item_8.jpg" alt="Paisaje_8" class="photo__item" />
+        </div>
+        <section class="places">          
+          <div class="place">
+            <h2 class="place__title">Cricieth, Gales</h2>
+            <div class="place__subtitle">
+              <div class="place__artist">ARTISTA</div>
+              <div class="place__artist-name">
+                Steffan Warren, editor jefe
+              </div>
+              <div class="place__artist-name">
+                Kseniya Glagoleva, gerente de proyectos
+              </div>
+            </div>
+            <img
+              src="./images/place_1.jpg"
+              alt="Berea,Estados Unidos"
+              class="place__image"
+            />
+            <div class="place__paragraphs">
+              <p class="place__text">
+                Berea es una pequeña ciudad ubicada en la parte central de Kentucky. La ciudad está rodeada por hermosos bosques y campos. Es conocida como la capital de la artesanía del estado, y sus visitantes hallarán infinitas posibilidades para ir de compras: tiendas de joyas, velas y artículos de madera artesanales; galerías, talleres de vidrio y más. La ciudad celebra un festival anual que rinde tributo al "spoonbread", un platillo local hecho de pan de maíz y que se sirve con una cuchara de madera.
+              </p>
+              <p class="place__text">
+                Aunque, probablemente es mejor conocida por su universidad. El Berea College fue fundado en 1855 y fue la primera universidad sureña integrada racialmente, así como la primera en ser coeducacional. Algo que en cierta manera la hace única, es que no cobra colegiatura: cada estudiante recibe una beca del 100%.
+              </p>
+            </div>
+            <a  class="place__link"   href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"     >
+              Compra esta obra de arte como NF   </a>
+            </div> 
+            <div class="place">
+                <h2 class="place__title">Berea, Estados Unidos</h2>
+                <div class="place__subtitle">
+                  <div class="place__artist">ARTISTA</div>
+                  <div class="place__artist-name">
+                    Travis Turner, autor y editor
+                  </div>
+                </div>
+                <img
+                  src="./images/place_2.jpg"
+                  alt="Berea,Estados Unidos"
+                  class="place__image"
+                />
+                <div class="place__paragraphs">
+                  <p class="place__text">
+                    Berea es una pequeña ciudad ubicada en la parte central de Kentucky. La ciudad está rodeada por hermosos bosques y campos. Es conocida como la capital de la artesanía del estado, y sus visitantes hallarán infinitas posibilidades para ir de compras: tiendas de joyas, velas y artículos de madera artesanales; galerías, talleres de vidrio y más. La ciudad celebra un festival anual que rinde tributo al "spoonbread", un platillo local hecho de pan de maíz y que se sirve con una cuchara de madera.
+                  </p>
+                  <p class="place__text">
+                    Aunque, probablemente es mejor conocida por su universidad. El Berea College fue fundado en 1855 y fue la primera universidad sureña integrada racialmente, así como la primera en ser coeducacional. Algo que en cierta manera la hace única, es que no cobra colegiatura: cada estudiante recibe una beca del 100%.
+                  </p>
+                </div>
+                <a  class="place__link"   href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"     >
+                  Compra esta obra de arte como NF   </a>
+                </div>
+                <div class="place">
+                  <h2 class="place__title">Muramvya, Burundi</h2>
+                  <div class="place__subtitle">
+                    <div class="place__artist">ARTISTA</div>
+                    <div class="place__artist-name">
+                      Travis Turner, autor y editor
+                    </div>
+                  </div>
+                  <img
+                    src="./images/place_3.jpg"
+                    alt="Cartagena, Colombia"
+                    class="place__image"
+                  />
+                  <div class="place__paragraphs">
+                    <p class="place__text">
+                      Barranquilla, es la capital del departamento Atlántico de Colombia y es un desbordante puerto marino, bordeado por el río Magdalena. La ciudad es conocida por su enorme Carnaval, que reúne a artistas con extravagantes disfraces, carros elaborados y música cumbia. En el elegante vecindario El Prado, el Museo Romántico exhibe artefactos de festivales y exhibiciones anteriores de famosos colombianos, como el escritor Gabriel García Márquez.
+                    </p>
+                    <p class="place__text">
+                      Aunque, probablemente es mejor conocida como La Puerta de Oro. Barranquilla es sede de una de las festividades folclóricas y culturales más importantes de Colombia, el carnaval de Barranquilla, declarado Obra Maestra del Patrimonio Cultural de la Nación
+                    </p>
+                  </div>
+                  <a
+                    class="place__link"
+                    href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+                  >
+                    Compra esta obra de arte como NFT
+                  </a>
+                </div>
+            <div class="place">
+              <h2 class="place__title">Cartagena, Colombia </h2>
+              <div class="place__subtitle">
+                <div class="place__artist">ARTISTA</div>
+                <div class="place__artist-name">
+                  Luis Correal, Diseñador Gráfico
+                </div>
+              </div>
+              <img
+                src="./images/place_4.jpg"
+                alt="Cartagena, Colombia"
+                class="place__image"
+              />
+              <div class="place__paragraphs">
+                <p class="place__text">
+                  Cartagena de Indias, una joya colonial en la costa caribe colombiana, te cautiva con su historia y encanto. Sus calles empedradas, llenas de casas de colores vibrantes, te transportan al pasado. La fortaleza de San Felipe de Barajas, un impresionante complejo militar, te recuerda la época de piratas y corsarios. Sus playas de arena blanca y aguas cristalinas te invitan a relajarte y disfrutar del sol. No te pierdas la oportunidad de recorrer el centro histórico, declarado Patrimonio de la Humanidad por la UNESCO, y disfrutar de la gastronomía local, llena de sabores caribeños. Cartagena es un destino que te dejará con ganas de volver.                </p>
+                <p class="place__text">
+                  Cartagena, una ciudad llena de historia y encanto, te cautiva con sus calles empedradas, sus casas de colores vibrantes y su arquitectura colonial. La fortaleza de San Felipe de Barajas, un símbolo de la resistencia, te transporta a la época de piratas. Sus playas de arena blanca y aguas cristalinas te invitan a relajarte y disfrutar del sol. Cartagena es un destino que te dejará con ganas de volver.
+                </p>
+              </div>
+              <a
+                class="place__link"
+                href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              >
+                Compra esta obra de arte como NFT
+              </a>
+            </div>
+               </section>
+          </main>
+          <footer class="footer">
         <p class="footer__copyright">&copy;2025 Luis Correal</p>
       </footer>
     </div>
